# Ext4Windows

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LEARNING_ROADMAP.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.md  README.pt-BR.md  README.ru.md  README.zh.md
.github/workflows/: build.yml  release.yml
assets/: gui.html
cmake/: FindWebView2.cmake  FindWinFsp.cmake
docs/: README.de.md  README.es.md  README.fr.md  README.ja.md  README.pt-BR.md  README.ru.md  README.zh.md
installer/: ext4windows.iss  make_portable.py
src/: blockdev_file.cpp  blockdev_file.hpp  blockdev_partition.cpp  blockdev_partition.hpp  client.cpp  client.hpp  debug_log.hpp  ext4_filesystem.cpp  ext4_filesystem.hpp  ext4windows.rc  interactive.cpp  interactive.hpp  main.cpp  partition_scanner.cpp  partition_scanner.hpp  pipe_protocol.hpp  server.cpp  server.hpp  test_utils.hpp  tray_icon.cpp  tray_icon.hpp
src/gui/: gui_main.cpp  gui_main.hpp  gui_resources.hpp
tests/: CMakeLists.txt  test_blockdev.cpp  test_format_size.cpp  test_permissions.cpp  test_string_utils.cpp  test_timestamps.cpp  test_validation.cpp
